--- a/public-configs/service-config-dev.yml
+++ b/public-configs/service-config-dev.yml
@@ -21,6 +21,13 @@ db2:
   username: root
   # 生产环境建议修改
   passwd: 123456
+user-db:
+  address: ${local-address}
+  db-name: user
+  # 生产环境建议修改
+  username: root
+  # 生产环境建议修改
+  passwd: 123456
 
 data-source-configs:
   db1:
@@ -43,6 +50,20 @@ data-source-configs:
       jdbc-url: jdbc:mysql://${db2.address:127.0.0.1}:3306/${db2.db-name}?useSSL=false&characterEncoding=utf8
       username: ${db2.username}
       password: ${db2.passwd}
+      driver-class-name: com.mysql.jdbc.Driver
+      hikari:
+        pool-name: HikariCP
+        auto-commit: false
+        connection-timeout: 5000
+        max-lifetime: 600000
+        maximum-pool-size: 50
+        minimum-idle: 5
+  user-db:
+    type: com.zaxxer.hikari.HikariDataSource
+    data-config:
+      jdbc-url: jdbc:mysql://${user-db.address:127.0.0.1}:3306/${user-db.db-name}?useSSL=false&characterEncoding=utf8
+      username: ${user-db.username}
+      password: ${user-db.passwd}
       driver-class-name: com.mysql.jdbc.Driver
       hikari:
         pool-name: HikariCP
@@ -82,10 +103,11 @@ service:
     simple-other-service:
       application-name: simple-other-service
       protocol-name: dubbo
-      protocol-port: ${MICRO_SERVICE_PORT:30810}
+      protocol-port: ${MICRO_SERVICE_PORT:31000}
       scan: org.dragonli.service.general.other.OtherService
       group: ${MICRO_SERVICE_GROUP:}
-      http-port: ${MICRO_SERVICE_HTTP_PORT:7094}
+      http-port: ${MICRO_SERVICE_HTTP_PORT:7000}
+      telnet-port: ${MICRO_SERVICE_TELNET_PORT:51000}
       zookeeper-address: ${local-address:127.0.0.1}:2181
       zookeeper-timeout: 3000
       zookeeper-base-key: /service/datas/lock/base
@@ -102,9 +124,10 @@ service:
       configsStr: ${NETTY_CONFIG_STR:${local-address}:${service.general.default-websocket-port};ws://${service.general.single-websocket-address}:${service.general.default-websocket-port}}
       application-name: simple-netty-service
       protocol-name: dubbo
-      protocol-port: ${MICRO_SERVICE_PORT:30809}
+      protocol-port: ${MICRO_SERVICE_PORT:31001}
       scan: org.dragonli.service.general.interfaces.general.WebSocketService
-      http-port: ${MICRO_SERVICE_HTTP_PORT:7096}
+      http-port: ${MICRO_SERVICE_HTTP_PORT:7001}
+      telnet-port: ${MICRO_SERVICE_TELNET_PORT:51001}
       group: ${MICRO_SERVICE_GROUP:}
       onlinePrefix: ${NETTY_ONLINE_ZOOKEEPER_PATH_PREFIX:/service/datas/websocket/online:}
       redisonlineKey: /service/datas/websocket/online
@@ -112,18 +135,27 @@ service:
     simple-db-service:
       application-name: simple-db-service
       protocol-name: dubbo
-      protocol-port: ${MICRO_SERVICE_PORT:30807}
+      protocol-port: ${MICRO_SERVICE_PORT:31002}
       scan: org.dragonli.service.db.service.DbService
-      http-port: ${MICRO_SERVICE_HTTP_PORT:7093}
+      http-port: ${MICRO_SERVICE_HTTP_PORT:7002}
+      telnet-port: ${MICRO_SERVICE_TELNET_PORT:51002}
       group: ${MICRO_SERVICE_GROUP:}
     dubbo-consumer-proxy-service:
       application-name: dubbo-consumer-proxy-service
       protocol-name: dubbo
-      protocol-port: ${MICRO_SERVICE_PORT:30800}
+      protocol-port: ${MICRO_SERVICE_PORT:31003}
       scan: org.dragonli.service.general.dubboconsumerservice.ConsumerService
-      http-port: ${MICRO_SERVICE_HTTP_PORT:7090}
+      http-port: ${MICRO_SERVICE_HTTP_PORT:7003}
       netty-port: ${MICRO_SERVICE_NETTY_PORT:${default-dubbo-consumer-proxy-port}}
-      telnet-port: ${MICRO_SERVICE_TELNET_PORT:50800}
+      telnet-port: ${MICRO_SERVICE_TELNET_PORT:51003}
+    user-service:
+      application-name: user-service
+      protocol-name: dubbo
+      protocol-port: ${MICRO_SERVICE_PORT:31004}
+      scan: org.dragonli.service.general.dubboconsumerservice.ConsumerService
+      http-port: ${MICRO_SERVICE_HTTP_PORT:7004}
+      netty-port: ${MICRO_SERVICE_NETTY_PORT:${default-dubbo-consumer-proxy-port}}
+      telnet-port: ${MICRO_SERVICE_TELNET_PORT:51004}
   node-service:
     dubbo-consumer-proxy-address: ${default-dubbo-consumer-proxy-address}
     redis-host: ${redis-address:127.0.0.1}
