--- a/public-configs/service-config-dev.yml
+++ b/public-configs/service-config-dev.yml
@@ -148,6 +148,7 @@ service:
       http-port: ${MICRO_SERVICE_HTTP_PORT:7003}
       netty-port: ${MICRO_SERVICE_NETTY_PORT:${default-dubbo-consumer-proxy-port}}
       telnet-port: ${MICRO_SERVICE_TELNET_PORT:51003}
+      group: ${MICRO_SERVICE_GROUP:}
     user-service:
       application-name: user-service
       protocol-name: dubbo
@@ -156,6 +157,7 @@ service:
       http-port: ${MICRO_SERVICE_HTTP_PORT:7004}
       netty-port: ${MICRO_SERVICE_NETTY_PORT:${default-dubbo-consumer-proxy-port}}
       telnet-port: ${MICRO_SERVICE_TELNET_PORT:51004}
+      group: ${MICRO_SERVICE_GROUP:}
   node-service:
     dubbo-consumer-proxy-address: ${default-dubbo-consumer-proxy-address}
     redis-host: ${redis-address:127.0.0.1}
